add_subdirectory(example_1) # bar extension
add_subdirectory(example_2) # continuation solver
add_subdirectory(example_3) # thermoelastic plate bending
add_subdirectory(example_4) # tie-constraints
add_subdirectory(example_5) # 2D topology optimization
add_subdirectory(example_6) # 2D SIMP topology optimization

