add_subdirectory(example_1) # bar extension
add_subdirectory(example_2) # continuation solver
add_subdirectory(example_3) # thermoelastic plate bending
add_subdirectory(example_4) # tie-constraints
add_subdirectory(example_5) # topology optimization
add_subdirectory(example_6) # SIMP topology optimization
add_subdirectory(example_7) # NastranIO input for Nastran BDF mesh
add_subdirectory(example_8) # Homogenized level-set topology optimization
add_subdirectory(example_9) # Cross section property analysis
